# course_6

./: catalog_category_fixture.json  catalog_product_fixture.json  pyproject.toml  requirements.txt
blog/: forms.py  models.py  urls.py  views.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: add_product.html  base.html  contacts.html  home.html  product_confirm_delete.html  product_form.html  product_info.html  product_list.html  product_unpublish_confirm.html  products_by_category.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
