[tool.poetry]
name = "course-6"
version = "0.1.0"
description = ""
authors = ["nikitt <nikittaosipov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
django = "^5.1.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
